fix layout issues on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -25,6 +25,13 @@ a
   &:hover
     color: white
 
+.tab-content
+  width: 100%
+  padding: 0 1em
+  max-width: 32em
+  margin-top: 1em
+  font-size: 1.5em
+
 .page-wrapper
   display: flex
   flex-direction: column
@@ -32,6 +39,9 @@ a
   align-items: center
 
 .page
+  display: flex
+  flex-direction: column
+  align-items: center
   max-width: 1440px
   width: 100%
   padding: 2em 0
@@ -55,6 +65,8 @@ a
 .navigation
   display: flex
   flex-direction: row
+  padding: 0 1em
+  width: 100%
   font-size: 1.5em
 
   &__item
@@ -70,6 +82,7 @@ a
 
 .talking-points-grid
   position: relative
+  width: 100%
   margin-top: 2em
 
   &__talking-points-wrapper
@@ -111,9 +124,25 @@ a
 
   &__title
     margin-top: 0.5em
-    font-size: 2em
+    font-size: 2.25em
     font-weight: bold
     line-height: 1.3
+
+.markdown
+  font-size: inherit
+
+  & > *:first-child
+    margin-top: 0
+
+  & > *:last-child
+    margin-bottom: 0
+
+  * + *
+    margin-top: 1em
+
+  ul
+    list-style: disc
+    padding-left: 1.5em
 
 .rebuttal-pane
   position: relative
@@ -150,7 +179,7 @@ a
     flex-direction: row
     font-size: 1.5em
     min-height: 20em
-    padding: 3em
+    padding: 2em
 
   &__column
     position: relative
@@ -169,22 +198,6 @@ a
     &:not(:first-child)
       margin-left: 0
       margin-top: 3em
-
-  &__markdown
-    font-size: inherit
-
-    & > *:first-child
-      margin-top: 0
-
-    & > *:last-child
-      margin-bottom: 0
-
-    * + *
-      margin-top: 1em
-
-    ul
-      list-style: disc
-      padding-left: 1.5em
 
   h2
     font-size: 1.5em
@@ -218,3 +231,7 @@ a
 
   &__close-icon
     fill: currentColor
+
+@media only screen and (max-width: 600px)
+  html
+    font-size: 12px
